# PasswordManager

./: CHANGELOG.md  LICENSE  PasswordManager.cabal  README.md  passwords.json  stack.yaml
.stack-work/: stack.sqlite3
app/: Main.hs
data/: franco.json  testuser.json  user1.json
src/: Encryption.hs
test/: Test.hs
