cabal-version:       2.2

name:                PasswordManager
version:             0.1.0.0
synopsis:            A password manager application
homepage:            https://github.com/githubuser/PasswordManager#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                       CHANGELOG.md

-- Ejecutable principal
executable PasswordManager
  hs-source-dirs:      app src  
  main-is:             Main.hs  
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , cryptonite     
                       -- aca van otras dependencias o librerias
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
