cabal-version:       2.2

name:                PasswordManager
version:             0.1.0.0
synopsis:            A password manager application
homepage:            https://github.com/githubuser/PasswordManager#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                       CHANGELOG.md

-- Tests
test-suite encryption-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Test.hs
  other-modules:       Encryption
  build-depends:       base >= 4.7 && < 5
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , cryptonite
                      , memory
                      , bytestring
                      , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns

-- Ejecutable principal
executable PasswordManager
  hs-source-dirs:      app src  
  main-is:             Main.hs
  other-modules:       Encryption
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , cryptonite
                       , memory
                       , bytestring
                       , aeson
                       , directory
                       , filepath
                       , base64-bytestring
                       , process
                       , time
                       -- aca van otras dependencias o librerias
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
